# orange3-bioinformatics

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  README.pypi  azure-pipelines-release.yml  azure-pipelines.yml  codecov.yml  conda_environment.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.azure-pipelines/: build.yml  install_addon.yml  install_steps.yml  jobs.yml  lint_job.yml  test.yml  test_job.yml  test_steps.yml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: future_compatibility_workflow.yml  lint.yml  linux_workflow.yml  llint_workflow.yml  release.yml  test.yml
.travis/: install_miniconda.sh  install_orange.sh  install_orange3.sh
doc/: conf.py  contents.rst  home.rst  index.rst  scripting_reference.rst  widget_data.json  widgets.json  widgets.rst
doc/_templates/: about.html  globaltoc.html  useful_links.html
doc/scripting_references/: annotation.rst  dicty_phenotypes.rst  geneset.rst  geo.rst  go.rst  kegg.rst  marker_genes.rst  ncbi_gene.rst  ncbi_taxonomy.rst  resolwe.rst  serverfiles.rst
doc/scripting_references/code/geo/: dataset_info.py  dataset_samples.py  predict_disease_state.py
doc/scripting_references/code/go/: enrichment.py  gene_annotations.py
doc/scripting_references/code/ncbi/gene/: gene_matcher_example.py  gene_of_interest.py
doc/scripting_references/code/ncbi/taxonomy/: common_tax_ids.py
doc/widgets/: annotate_projection.md  cluster_analysis.md  databases_update.md  databasesupdate.rst  dictyExpress.rst  dicty_express.md  differential_expression.md  differentialexpression.rst  gene_name_matcher.md  gene_set_enrichment.md  gene_sets.md  geneinfo.rst  genes.md  geo_data_sets.md  geodatasets.rst  go_browser.md  gobrowser.rst  homologs.md  kegg_pathways.md  keggpathways.rst  marker_genes.md  single_sample_scoring.md  volcano_plot.md
orangecontrib/bioinformatics/: __init__.py
orangecontrib/bioinformatics/annotation/: annotate_projection.py  annotate_samples.py
orangecontrib/bioinformatics/cluster_analysis/: __init__.py
orangecontrib/bioinformatics/dicty/: __init__.py  config.py  phenotypes.py
orangecontrib/bioinformatics/geneset/: __init__.py  config.py  utils.py
orangecontrib/bioinformatics/geo/: __init__.py  config.py  dataset.py  utils.py
orangecontrib/bioinformatics/go/: __init__.py  config.py
orangecontrib/bioinformatics/kegg/: __init__.py  api.py  brite.py  caching.py  conf.py  databases.py  pathway.py  service.py  types.py
orangecontrib/bioinformatics/kegg/entry/: __init__.py  fields.py  parser.py
orangecontrib/bioinformatics/kegg/tests/: test_api.py  test_databases.py  test_entry.py
orangecontrib/bioinformatics/ncbi/: __init__.py
orangecontrib/bioinformatics/ncbi/gene/: __init__.py  config.py  utils.py
orangecontrib/bioinformatics/ncbi/homologene/: __init__.py
orangecontrib/bioinformatics/ncbi/taxonomy/: __init__.py  config.py  utils.py
orangecontrib/bioinformatics/omim/: __init__.py  config.py
orangecontrib/bioinformatics/preprocess/: __init__.py  normalize.py
orangecontrib/bioinformatics/resolwe/: __init__.py  genapi.py  resapi.py  sample_metadata.py  utils.py
orangecontrib/bioinformatics/tests/: __init__.py  test_geneset.py  test_geo.py  test_statistics.py
orangecontrib/bioinformatics/tests/annotation/: test_annotate_projection.py  test_annotate_samples.py
orangecontrib/bioinformatics/tests/kegg/: test_api.py  test_databases.py  test_entry.py
orangecontrib/bioinformatics/tests/ncbi/: test_gene.py  test_homologene.py  test_taxonomy.py
orangecontrib/bioinformatics/tests/preprocess/: test_normalize.py
orangecontrib/bioinformatics/tests/resolwe/: test_genapi.py  test_sample_metadata.py
orangecontrib/bioinformatics/tests/utils/: test_gui.py
orangecontrib/bioinformatics/tests/widgets/: test_OWAnnotateProjection.py  test_OWDifferentialExpression.py  test_OWGEODatasets.py  test_OWGeneSets.py  test_OWGenes.py  test_OWGenialisExpressions.py  test_OWHomologs.py  test_OWMarkerGenes.py
orangecontrib/bioinformatics/tests/widgets/components/: test_GeneSetSelection.py  test_gene_scoring.py  test_gene_set_selection.py  test_resolwe.py
orangecontrib/bioinformatics/tests/widgets/data/: genes.tab  markers-panglao.pkl
orangecontrib/bioinformatics/utils/: __init__.py  environ.py  serverfiles.py  statistics.py
orangecontrib/bioinformatics/widgets/: OWAnnotateProjection.py  OWClusterAnalysis.py  OWDatabasesUpdate.py  OWDifferentialExpression.py  OWGEODatasets.py  OWGOBrowser.py  OWGeneInfo.py  OWGeneNameMatcher.py  OWGeneNameMatching.py  OWGeneSetEnrichment.py  OWGeneSets.py  OWGeneSetsEnrichment.py  OWGenes.py  OWGenialisExpressions.py  OWHomologs.py  OWHomology.py  OWKEGGPathwayBrowser.py  OWKaplanMeier.py  OWMarkerGenes.py  OWSingleSampleScoring.py  OWVolcanoPlot.py  OWdictyExpress.py  __init__.py
orangecontrib/bioinformatics/widgets/components/: __init__.py  gene_scoring.py  gene_set_selection.py  resolwe.py
orangecontrib/bioinformatics/widgets/utils/: __init__.py  concurrent.py  data.py  gui.py  itemdelegates.py  itemmodels.py  settings.py
orangecontrib/bioinformatics/widgets/utils/gui/: __init__.py  gene_scoring.py  gene_sets.py  label_selection.py  list_completer.py
server_update/: __init__.py  common.py  updateDictyBase.py  updateGEO.py  updateGO.py  updateGeneInfo.py  updateGeneMatcher.py  updateGeneSets.py  updateTaxonomy.py
server_update/tests/: test_Dicty.py  test_GEO.py  test_GO.py  test_GeneInfo.py  test_GeneSets.py  test_Taxonomy.py
templates/: install_add_on.yml  run_tests.yml
