[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm", "wheel"]

[tool.black]
skip_string_normalization = "1"

[tool.isort]
profile = 'black'
length_sort = 'True'
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = 'True'
include_trailing_comma = 'True'
known_third_party = ['numpy','scipy','pandas','requests']
known_anyqt = 'AnyQt'
known_orange = 'Orange'
known_orangewidget = 'orangewidget'
known_orangecanvas = 'orangecanvas'
known_first_party = 'orangecontrib.bioinformatics'
sections = ['FUTURE','STDLIB','THIRDPARTY','ANYQT','ORANGECANVAS', 'ORANGEWIDGET', 'ORANGE', 'FIRSTPARTY','LOCALFOLDER']
default_section = 'THIRDPARTY'
not_skip = '__init__.py'
