[metadata]
name = Orange3-Bioinformatics
author = Bioinformatics Laboratory, FRI UL
author_email = info@biolab.si
maintainer = Jaka Kokosar
url = https://github.com/biolab/orange3-bioinformatics
project_urls =
    Bug Tracker = https://github.com/biolab/orange3-bioinformatics/issues
    Documentation = https://orange3-bioinformatics.readthedocs.io/en/latest/
    Source Code = https://github.com/biolab/orange3-bioinformatics/
documentation_name = Orange Bioinformatics
description = Orange Bioinformatics add-on for Orange data mining software package.
long_description = file: README.md
long_description_content_type= text/markdown
keywords = 'orange3 add-on'
license = GPL3+
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent

[options]
namespace_packages = orangecontrib
test_suite = orangecontrib.bioinformatics.tests.suite
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages = find:

[options.entry_points]
orange3.addon =
	bioinformatics=orangecontrib.bioinformatics
orange.widgets =
    Bioinformatics=orangecontrib.bioinformatics.widgets
orange.canvas.help =
    html-index = orangecontrib.bioinformatics.widgets:WIDGET_HELP_PATH


[flake8]
max-line-length = 119
max-complexity = 20
# to ensure Black compatibility #429
ignore =
    D100, D101, D102, D103, D104, D105,  D106, D107, D202,
    E111, E121, E122, E123, E124, E125, E126, E201, E202,
    E203, E221, E222, E225, E226, E227, E231, E241, E251,
    E261, E262, E265, E271, E272, E302, E303, E306, E502,
    E701, E702, E703, E704,
    W291, W292, W293, W391, W503
exclude =
    # Exclude some modules that were ported from legacy add-on.
    orangecontrib/bioinformatics/kegg/
    orangecontrib/bioinformatics/widgets/utils/gui/
    # Exclude some widgets that were ported from legacy add-on.
    orangecontrib/bioinformatics/widgets/OWVolcanoPlot.py
    orangecontrib/bioinformatics/widgets/OWKEGGPathwayBrowser.py
    orangecontrib/bioinformatics/widgets/OWDifferentialExpression.py
    orangecontrib/bioinformatics/widgets/OWVolcanoPlot.py
    orangecontrib/bioinformatics/widgets/OWDatabasesUpdate.py

# Qt, Orange and UnitTests functions and classes
ignore-names =
    setUp,tearDown,setUpClass,tearDownClass,setUpTestData,settingsHandler,contextMenuEvent,onDeleteWidget
    sizeHint,rowCount,eventFilter,handleNewSignals,columnCount,headerData,closeEvent,_argsortData

[isort]
line_length = 119
length_sort = True
multi_line_output=3
force_grid_wrap=0
use_parentheses=True
include_trailing_comma = True
known_third_party=numpy,scipy,pandas,requests
known_anyqt=AnyQt
known_orange=Orange
known_first_party = orangecontrib.bioinformatics
sections=FUTURE,STDLIB,THIRDPARTY,ANYQT,ORANGE,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
not_skip = __init__.py
