[metadata]
name = Orange3-Bioinformatics
author = Bioinformatics Laboratory, FRI UL
author_email = info@biolab.si
maintainer = Jaka Kokosar
url = https://github.com/biolab/orange3-bioinformatics
project_urls =
    Bug Tracker = https://github.com/biolab/orange3-bioinformatics/issues
    Documentation = https://orange3-bioinformatics.readthedocs.io/en/latest/
    Source Code = https://github.com/biolab/orange3-bioinformatics/
documentation_name = Orange Bioinformatics
description = Orange Bioinformatics add-on for Orange data mining software package.
long_description = file: README.pypi
long_description_content_type= text/markdown
keywords = 'orange3 add-on'
license = GPL3+
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent

[options]
namespace_packages = orangecontrib
test_suite = orangecontrib.bioinformatics.tests.suite
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages = find:

[options.entry_points]
orange3.addon =
	bioinformatics=orangecontrib.bioinformatics
orange.widgets =
    Bioinformatics=orangecontrib.bioinformatics.widgets
orange.canvas.help =
    html-index = orangecontrib.bioinformatics.widgets:WIDGET_HELP_PATH


[flake8]
# Black compatibility
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
max-complexity = 20
ignore =
    # Ignore this since we use PyQt5 basically everywhere.
    N802,

exclude =
    # Exclude some modules that were ported from legacy add-on.
    orangecontrib/bioinformatics/kegg/
    orangecontrib/bioinformatics/widgets/utils/gui/
    # Exclude some widgets that were ported from legacy add-on.
    orangecontrib/bioinformatics/widgets/OWVolcanoPlot.py
    orangecontrib/bioinformatics/widgets/OWKEGGPathwayBrowser.py
    orangecontrib/bioinformatics/widgets/OWDifferentialExpression.py
    orangecontrib/bioinformatics/widgets/OWVolcanoPlot.py
    orangecontrib/bioinformatics/widgets/OWDatabasesUpdate.py

ignore-names =
    settingsHandler
